--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -146,7 +146,10 @@ footer {
       address {
         padding-top: 8px;
       }
-
+      a {
+        color: currentColor;
+        text-decoration: none;
+      }
       svg {
         margin-right: 8px;
       }
